made footer positive fixed to bottom and text less visible

--- a/public/stylesheets/detailpage.css
+++ b/public/stylesheets/detailpage.css
@@ -1,5 +1,7 @@
 html {
     box-sizing: border-box;
+    min-height:100;
+    position: relative;
 }
 
 *,
@@ -116,14 +118,17 @@ h6 {
 }
 
 footer{
-   display: flex;
-   flex-direction: column;
-   align-items: flex-end;
-   
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    position: fixed;
+    bottom: 3px;
+    right: 5px;
+    height: 20px;
 }
 
 footer a {
-    color: slategrey;
+    color: rgb(60, 64, 70);
 }
 
 .characterInComics {
